WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276401
QuickLook Image dismissal animation lands in the wrong place
https://bugs.webkit.org/show_bug.cgi?id=276401
Summary
QuickLook Image dismissal animation lands in the wrong place
Abrar Rahman Protyasha
Reported
2024-07-09 18:07:36 PDT
rdar://129983325
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-07-09 18:20:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30627
EWS
Comment 2
2024-07-09 20:10:30 PDT
Committed
280803@main
(9e0bae9552cc): <
https://commits.webkit.org/280803@main
> Reviewed commits have been landed. Closing PR #30627 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug